--- a/app/src/main/res/layout/message_sent_layout.xml
+++ b/app/src/main/res/layout/message_sent_layout.xml
@@ -22,9 +22,10 @@
         android:layout_marginRight="20dp"
         android:text="salutsalutsalutsalutsalutsalutsalutsalutsalutsalutsalutsalutsalut"/>
 
+    <!--
     <ImageView
         android:id="@+id/image_profile_picture"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/circle_background_lightdark"/>
+        android:background="@drawable/circle_background_lightdark"/> -->
 </LinearLayout>
