--- a/app/src/main/res/layout/fragment_event_items.xml
+++ b/app/src/main/res/layout/fragment_event_items.xml
@@ -27,7 +27,7 @@
                 android:textColor="@color/black"
                 android:text="📝"
                 android:textSize="25dp"
-                android:background="@drawable/circle_background_colored"/>
+                android:background="@drawable/circle_background"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -62,7 +62,6 @@
                 android:text="Members"/>
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/button_items"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -76,14 +75,14 @@
                 android:textColor="@color/black"
                 android:text="🛒"
                 android:textSize="25dp"
-                android:background="@drawable/circle_background_lightdark"/>
+                android:background="@drawable/circle_background_colored"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:textColor="@color/white"
-                android:text="Items"/>
+                android:text="..."/>
         </LinearLayout>
 
         <LinearLayout
@@ -152,27 +151,52 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:text="Description"
+                android:text="Items"
                 android:textSize="20sp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-
                 android:layout_weight="1"
                 android:layout_marginLeft="40dp"/>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center">
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/button_quit_event"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Quitter l'événement"
-                android:background="@null"
-                android:textAllCaps="false"
-                android:textColor="@color/red" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/items_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </LinearLayout>
+
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/button_add_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/header">
+
+        <ImageButton
+            android:id="@+id/button_add_item_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:src="@drawable/add"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="Add an Item"
+            android:textSize="20sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="10dp"/>
     </LinearLayout>
 </RelativeLayout>
