--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -74,4 +74,29 @@
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:colorControlNormal">@color/white</item>
     </style>
+
+
+    <!-- POPUP -->
+    <style name="PopupTitleStyle" parent="android:TextAppearance">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="PopupInputStyle" parent="Widget.AppCompat.EditText">
+        <item name="android:textColorHint">@color/grey</item>
+        <item name="android:background">@null</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+    </style>
+
+    <style name="PopupBackgroundStyle">
+        <item name="android:background">@drawable/popup_background</item>
+    </style>
+
+    <style name="PopupButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:textColor">@color/red</item>
+        <item name="android:padding">5dp</item>
+    </style>
 </resources>
