--- a/app/src/main/res/layout/fragment_event_description.xml
+++ b/app/src/main/res/layout/fragment_event_description.xml
@@ -162,13 +162,114 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
             android:gravity="center">
+
+            <LinearLayout
+                android:background="@drawable/dark_rounded_background"
+                android:layout_margin="10dp"
+                android:padding="20dp"
+                android:radius="20dp"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Date"
+                        android:textColor="@color/grey"
+                        android:textSize="15sp"
+                        android:textStyle="italic"/>
+
+                    <TextView
+                        android:layout_marginLeft="20dp"
+                        android:id="@+id/text_event_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:textSize="17sp"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Hour"
+                        android:textColor="@color/grey"
+                        android:textSize="15sp"
+                        android:textStyle="italic"/>
+
+                    <TextView
+                        android:id="@+id/text_event_hour"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:textSize="17sp"
+                        android:layout_marginLeft="20dp"
+                        android:text="15h00"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:background="@drawable/dark_rounded_background"
+                android:layout_margin="10dp"
+                android:radius="20dp"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <LinearLayout
+                    android:id="@+id/layout_map"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <FrameLayout
+                        android:background="@drawable/rounded_mapview_style"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:clipToOutline="true">
+
+                        <com.google.android.gms.maps.MapView
+                            android:id="@+id/map_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                    </FrameLayout>
+                    <TextView
+                        android:id="@+id/text_event_address"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:text="Address"
+                        android:padding="20dp"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/button_quit_event"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:text="Quitter l'événement"
                 android:background="@null"
                 android:textAllCaps="false"
