--- a/app/src/main/res/layout/fragment_event_items.xml
+++ b/app/src/main/res/layout/fragment_event_items.xml
@@ -27,7 +27,7 @@
                 android:textColor="@color/black"
                 android:text="📝"
                 android:textSize="25dp"
-                android:background="@drawable/circle_background"/>
+                android:background="@drawable/circle_background_lightdark"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -82,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:textColor="@color/white"
-                android:text="..."/>
+                android:text="Items"/>
         </LinearLayout>
 
         <LinearLayout
