--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -10,7 +10,8 @@
     <Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="100dp"
+        android:gravity="center_vertical">
 
         <ImageButton
             android:id="@+id/button_back_toolbar"
@@ -24,61 +25,63 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Event Name"
-            android:paddingEnd="40dp"
-            android:paddingTop="40dp"
-            android:paddingBottom="40dp"
             android:textColor="@color/white"
             android:textSize="20dp" />
     </Toolbar>
 
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/chat_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_below="@id/toolbar"
-        android:layout_above="@id/linear_layout"
-        android:layout_gravity="bottom"
-        android:padding="8dp" />
-
     <LinearLayout
-        android:id="@+id/linear_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:background="@drawable/lightdark_bar"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        android:paddingStart="30dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingEnd="20dp"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true">
 
-
-        <EditText
-            android:id="@+id/edit_message"
-            android:layout_width="0dp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/chat_recycler_view"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="@color/white"
-            android:textColorHint="@color/grey"
-            android:background="@null"
-            android:hint="Message..."
-            android:layout_marginRight="20dp"
-            android:textSize="15sp" />
+            android:padding="8dp" />
+
+        <LinearLayout
+            android:id="@+id/linear_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/lightdark_bar"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="2dp"
+            android:gravity="center">
 
 
-        <ImageButton
-            android:id="@+id/button_send_message"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/circle_background_purple"
-            android:src="@drawable/send_icon" />
+            <EditText
+                android:id="@+id/edit_message"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textColorHint="@color/grey"
+                android:background="@null"
+                android:hint="Message..."
+                android:paddingStart="30dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:textSize="15sp" />
+
+
+            <ImageButton
+                android:id="@+id/button_send_message"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/circle_background_purple"
+                android:src="@drawable/send_icon"
+                android:layout_marginRight="5dp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
