--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/dark"
+    android:gravity="center"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
         <Button
             android:id="@+id/button_contacts"
@@ -25,4 +25,5 @@
             android:layout_height="wrap_content"
             android:text="Events"/>
     </LinearLayout>
+
 </RelativeLayout>
