--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="red">#FEC6C5</color>
     <color name="grey">#929293</color>
     <color name="purple">#E0D7FD</color>
+    <color name="green">#DCFDD7</color>
 </resources>
