--- a/app/src/main/res/layout/event_item_popup_layout.xml
+++ b/app/src/main/res/layout/event_item_popup_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="20dp"
@@ -19,6 +20,7 @@
         android:id="@+id/item_info_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        tools:listitem="@layout/event_description_item_info_layout"/>
 
 </LinearLayout>
