--- a/app/src/main/res/layout/fragment_event_description.xml
+++ b/app/src/main/res/layout/fragment_event_description.xml
@@ -87,6 +87,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/button_expenses"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -107,7 +108,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:textColor="@color/white"
-                android:text="..."/>
+                android:text="Expenses"/>
 
         </LinearLayout>
         <LinearLayout
