--- a/app/src/main/res/layout/fragment_signup_username.xml
+++ b/app/src/main/res/layout/fragment_signup_username.xml
@@ -19,13 +19,15 @@
             <EditText
                 android:id="@+id/edit_username"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textColorHint="@color/grey"
                 android:textColor="@color/white"
                 android:textSize="25dp"
                 android:background="@null"
                 android:textAlignment="center"
-                android:hint="user_name" />
+                android:hint="user_name"
+                android:inputType="text|textImeMultiLine"
+                android:maxLines="1"/>
 
             <TextView
                 android:id="@+id/text_username_validity"
